--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>deepspace</name>
+	<name>deepspace - SPBLI</name>
 	<comment>Project deepspace created by Buildship.</comment>
 	<projects>
 	</projects>
